--- a/todoList/Base.lproj/Main.storyboard
+++ b/todoList/Base.lproj/Main.storyboard
@@ -12,7 +12,6 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="todoList" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
@@ -46,6 +45,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="Epw-IE-Ueo" kind="showDetail" identifier="itemDetail" id="3Ki-JS-9Jn"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -82,6 +84,7 @@
                         <outlet property="tabView" destination="QQj-Ne-CzE" id="NfR-ZT-CfV"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <searchDisplayController id="OGK-w3-hgx">
                     <connections>
                         <outlet property="delegate" destination="BYZ-38-t0r" id="9Gp-rh-uiS"/>
@@ -159,4 +162,7 @@
             <point key="canvasLocation" x="725.60000000000002" y="-413.3433283358321"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="3Ki-JS-9Jn"/>
+    </inferredMetricsTieBreakers>
 </document>
